# SAlly

./: .gitignore  README.md  pyproject.toml
data/: midaslv_only.yml
data/rules/: chained_rule_with_group.json  chainrule_pv_household.json  demo_rules.json  test1.json  test2.json
doc/: observability-guide.md  test_commands.md
doc/Diagrams-Compact/: 01-SystemArchitecture.mmd  02-HDF5Simulation.mmd  03-TimescaleDB-ER.mmd  04-EventDataFlow.mmd  05-TTStack.mmd  06-SequenceSimStep.mmd  07-LayerArchitecture.mmd  08-DomainModel.mmd  09-Deployment.mmd  10-EventBus.mmd  README.md
doc/Diagrams/Mermaid-Code/: 01-HDF5-Simulation-Component.mmd  02-Mosaik-Simulation-Component.mmd  03-TimescaleDB-ER-Diagram.mmd  04-Orchestration-Block-Diagram.mmd  05-DataFlow-RuleTriggered-Event.mmd  06-TT-Stack-Telemetry-Architecture.mmd  07-Sequence-SimulationStep.mmd  08-Sequence-SetpointChange.mmd  09-Sequence-SystemStartup.mmd  10-Class-Diagram-Domain.mmd  11-C4-Context-Diagram.mmd  12-State-Diagram-Simulation.mmd  13-Deployment-Diagram.mmd  14-EventBus-Architecture.mmd  15-Sequence-MQTTBridge.mmd  16-RuleChain-Evaluation-Flow.mmd  17-Layer-Architecture.mmd  18-Sequence-DatabasePersistence.mmd  README.md  dependency-graph.xml  scada.py
doc/GPO/: DataFlow.md  Usage.md
doc/Sally-General/: Installation.md  dependencies.md
doc/Simbuilder/: simbuilder_setup.md
doc/Simulation & Data-Providers/: grid_entity_types.md  timescale_setup.md
docker/TT-Stack/: .env.example  README.md  SERVICE-GRAPH-SETUP.md  Start-TTStack.ps1  Stop-TTStack.ps1  docker-compose.yaml  grafana-dashboards.yaml  grafana-datasources.yaml  grafana-explore-queries.json  loki-config.yaml  mosquitto.conf  otel-collector-config.yaml  prometheus.yaml  tempo-queries.md  tempo.yaml
docker/TT-Stack/Scripts/: TimescaleDB.InitialSetup.ps1  TimescaleDB.InitialSetup.sh
docker/TT-Stack/dashboards/: sally-eventbus.json  sally-grid.json  sally-health.json  sally-overview.json  sally-rules.json  sally-scada.json  sally-setpoints.json
notebooks/mosaik/: mosaik_playground.ipynb
sally/: README.md  alt_main.py  containers.py  main.py  main_async_services.py  main_dev_and_gui.py  main_scada.py  main_scada_full.py  main_scada_midas.py  main_scada_web.py  paths.py
sally/application/: __init__.py
sally/application/rule_management/: sg_dummies.py  sg_rule.py  sg_rule_manager.py
sally/application/simulation/: base_sim.py  data_provider.py  example_usage.py  midas.py  mosaik_sim.py  sg_hdf5_sim.py  test_builder.py
sally/config/: EntityMapping.json  default.yml  dev.yml  prod.yml  sally.yml  scada.yml  test.yml
sally/core/: __init__.py  config.py  event_bus.py  hdf5_builder.py  logger.py  metrics_helpers.py  metrics_registry.py  mosaik_hdf5_parser.py  observer.py  service_telemetry.py  settings.py  telemetry.py  waitress.py
sally/domain/: __init__.py  events.py  grid_entities.py  scada_state.py  telemetry_otel_strings.py
sally/examples/: README.md  bigsim.py  example_mosaik_integration.py  example_simulation_builder.py  grid_observer.py
sally/infrastructure/: __init__.py
sally/legacy/: __init__.py  alt_main.py  sg_dummies.py
sally/presentation/: __init__.py
scripts/: load_test_telemetry.py  run_otel.ps1  run_otel.sh  run_scada_full.ps1  run_tests_with_diagrams.py  synchronizer.ps1  test_telemetry.py
simbuilder/: EXAMPLES.md  README.md  Start-DevServers.ps1  TYPE_DEFINITIONS_SCHEMA.md  check_setup.py  django_runner.py  manage.py  package-lock.json  requirements.txt  run_dev.py  start-dev.sh
simbuilder/assets/: main-DuwWHPSs.js
simbuilder/frontend/: App.jsx  index.html  main.jsx  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
test_result_diagrams/03-20260226-235131-midas/: junit.xml  junit_summary.txt  run_meta.txt
test_result_diagrams/04-20260226-235203-midas/: junit.xml  junit_summary.txt  run_meta.txt
test_result_diagrams/05-20260226-235218-unit/: junit.xml  junit_summary.txt  run_meta.txt
test_result_diagrams/06-20260226-235226-hdf5/: junit.xml  junit_summary.txt  run_meta.txt
test_result_diagrams/07-20260226-235327-hdf5/: junit.xml  junit_summary.txt  run_meta.txt
test_result_diagrams/08-20260226-235416-observability/: junit.xml  junit_summary.txt  run_meta.txt
test_result_diagrams/09-20260226-235452-observability/: junit.xml  junit_summary.txt  run_meta.txt
test_result_diagrams/10-20260227-000516-midas/: junit.xml  junit_summary.txt  run_meta.txt
test_result_diagrams/11-20260227-001356-benchmark/: junit.xml  junit_summary.txt  run_meta.txt
test_result_diagrams/12-20260227-001451-benchmark/: junit.xml  junit_summary.txt  run_meta.txt
test_result_diagrams/13-20260227-004135-unit/: junit.xml  junit_summary.txt  run_meta.txt
test_result_diagrams/14-20260227-004223-unit/: junit.xml  junit_summary.txt  run_meta.txt
test_result_diagrams/15-20260227-005225-single/: junit.xml  junit_summary.txt  run_meta.txt
test_result_diagrams/16-20260227-010517-single/: junit.xml  junit_summary.txt  run_meta.txt
tests/: conftest.py  conftest_coverage.py  hdf5_sim_tests.py  test_application_rules.py  test_application_simulation.py  test_core_buffers.py  test_core_config.py  test_core_hdf5_parser.py  test_core_logger.py  test_core_metrics_helpers.py  test_core_metrics_registry.py  test_core_observer.py  test_core_service_telemetry.py  test_core_settings.py  test_core_waitress.py  test_domain.py  test_event_bus_benchmark.py  test_event_bus_buffer_benchmarks.py  test_event_bus_buffers.py  test_hdf5_sim_tests.py  test_infra_data_management.py  test_infra_grid_data.py  test_infra_grid_topology.py  test_infra_load_forecasting.py  test_infra_mqtt_bridge.py  test_infra_rule_manager_sync.py  test_infra_setpoint_service.py  test_infra_stability.py  test_infra_websocket_bridge.py
tests/diag/: metrics.py
tests/example/: fw_example_tests.py
tests/framework/: assertions.py  base_test.py  dataclasses.py  env_conf.py  test_builder.py  test_data_management.py
tests/integration/: test_hdf5_real_files.py  test_observability_otel_e2e.py  test_scada_integration.py
tests/midas/: test_midas.py
(+280 files in other folders)
